Creating components for all Form elements. Adding component specific scss as well.

--- a/src/Components/MainContainer/MainContainer.module.scss
+++ b/src/Components/MainContainer/MainContainer.module.scss
@@ -1,7 +1,8 @@
 .main__container {
-    border: 1px solid #cccccc;
     margin: 10px auto;
     width: 70%;
     height: 80vh;
     display: flex;
+    text-align: left;
+    font-size: 16px;
 }
