--- a/src/Components/Fields/Buttons/Buttons.module.scss
+++ b/src/Components/Fields/Buttons/Buttons.module.scss
@@ -10,4 +10,8 @@
     &:hover {
         background-color: #282c34b3;
     }
+    &:disabled {
+        color: #cccccc;
+        cursor: not-allowed;
+    }
 }
