--- a/src/Components/PasswordCriteria/PasswordCriteriaStrength.module.scss
+++ b/src/Components/PasswordCriteria/PasswordCriteriaStrength.module.scss
@@ -8,7 +8,7 @@
         background-color: #cccccc;
         max-width: 32%;
         &.weak {
-            background-color: orangered;
+            background-color: red;
         }
         &.good {
             background-color: orange;
