--- a/src/Components/Fields/Inputs/InputFields.module.scss
+++ b/src/Components/Fields/Inputs/InputFields.module.scss
@@ -8,8 +8,11 @@
       box-shadow: inset 0px 0px 2px 2px rgba(255, 0, 0, 0.075);
     }
 }
+.form__field{
+    padding: 5px 0;
+}
 
 .label__field {
-    padding: 12px 12px 12px 0;
+    padding: 5px 5px 5px 0;
     display: inline-block;
 }
